--- a/footer_styles.css
+++ b/footer_styles.css
@@ -15,6 +15,13 @@ html {
   margin: 0;
   padding: 0;
 }
+/* cambio */
+#ft ul {
+  margin-block-start: 0;
+  margin-block-end: 0;
+  padding-inline-start: 0;
+}
+/* cambio */
 
 #ft {
   height: 298px;
@@ -38,6 +45,14 @@ html {
   display: block;
   text-decoration: none;
 }
+
+/* cambio */
+.ft__text:hover {
+  color: #bfd1cb;
+  text-decoration: none;
+}
+/* cambio */
+
 .ft__text a {
   text-decoration: none;
   color: #bfd1cb;
@@ -65,6 +80,7 @@ html {
   left: -3px;
   margin-top: 25px;
 }
+/* cambio */
 .ft__social-icon {
   width: 25px;
   height: 25px;
@@ -74,9 +90,12 @@ html {
   background-color: #b09245;
   text-decoration: none;
   text-align: center;
-  padding: 5px;
-  font-size: 14px;
+  padding: 4px;
+  font-size: 13px;
+  line-height: 1.5;
 }
+/* cambio */
+
 .ft__social-img,
 .ft__social-img img {
   display: block;
@@ -126,23 +145,39 @@ html {
 
 /* cambio */
 @media screen and (max-width: 1160px) {
+  #ft {
+    height: auto !important;
+    padding: 49px 20px 30px;
+    background: #566263;
+  }
   .ft__wrapper {
     grid-template-columns: repeat(3, 1fr);
+  }
+
+  /* ===================== */
+  /* ===================== */
+  /* ft__column-two */
+  /* ===================== */
+  .ft__column-two {
+    padding-inline-start: 30px !important;
   }
 }
 /* cambio */
 
-@media screen and (max-width: 778px) {
-  #ft {
-    height: auto;
-    padding: 49px 40px 30px;
-    text-align: center;
-  }
+@media screen and (max-width: 767px) {
   /* cambio */
+  #ft {
+    height: auto !important;
+    padding: 49px 20px 30px;
+    background: #566263;
+  }
   .ft__wrapper {
     grid-template-columns: repeat(1, 1fr);
     grid-gap: 20px;
     width: 100%;
+  }
+  .ft__text a {
+    margin-left: 0;
   }
   /* cambio */
 
@@ -172,7 +207,7 @@ html {
   /* ===================== */
   .ft__column-two {
     position: initial;
-    padding-left: 0;
+    padding-inline-start: 0 !important;
   }
 
   /* ===================== */
