--- a/header_styles.css
+++ b/header_styles.css
@@ -205,7 +205,7 @@ html {
 /* ====================== */
 /* Header Menu Main*/
 .hd__menu-main {
-  padding: 20px 0 0 10px;
+  padding: 20px 0 0 10px !important;
 }
 .hd__menu-itemTitle {
   display: block;
